# benchmark-runtime

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/benchmark_runtime/: __init__.py  artifacts.py  backend.py  bundle.py  checkpoint.py  client.py  contract.py  grading.py  manifest.py  protocols.py  sandbox_env.py  schemas.py
tests/: test_artifacts.py  test_backend.py  test_bundle.py  test_checkpoint.py  test_client.py  test_contract.py  test_manifest_schema.py  test_model_preflight.py  test_schemas.py
