[project]
name = "benchmark-runtime"
version = "0.1.0"
description = "Shared manifest, agent, artifact, and grading contracts for Vals benchmark orchestrators."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "create-benchmark-service @ git+https://github.com/vals-ai/create-benchmark-service.git@e537e6e9f3648329697341e407d40e554f5f33e5",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark_runtime"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "basedpyright>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportExplicitAny = false
exclude = [".venv/**"]

[tool.ruff]
line-length = 120
target-version = "py312"

